data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2061.wast
;; 2. **Test Description:** Define a nested `block` structure with an incorrect block type (`valtype?` used incorrectly), causing type mismatch.     - **Constraint Checked:** Verifies proper `blocktype` verification and type matching.     - **Infinite Loop Relation:** Mismatched block types can cause incorrect stack operations, potentially leading to unresolvable states and infinite loops.

(assert_invalid
  (module (func $type-mismatch-block-nested (result i32)
    (block (result f64)
      (block (result i32) (nop))
    )
  ))
  "type mismatch"
)